tests/errors/parser-errors/atblock/at_block_unclosed_body_marker_end.smark
@_tag_@;
body
@_end
